--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,20 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  web:
+    generate: true
+    image_path: "assets/images/icon.png"
+    background_color: "#0175C2"
+    theme_color: "#0175C2"
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
